--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,29 @@
-
 html {
-    background: #a8a0e259;
+    font-family: "Arial Black", serif;
+    background: #594F4F;
+    text-align: center;
+    padding: 67px 20px 51px 20px;
+    min-height: auto;
+}
 
+body {
+    background: #FFFAFA;
+}
+
+button {
+    font-family: "Bangers", serif;
+    font-size: x-large;
+    text-transform: uppercase;
+    color: #1c58af;
+    letter-spacing: .46px;
+    text-align: center;
+    line-height: 1.3;
+    background: #fff;
+    border: 0.0925497455em solid #1c58af;
+    box-shadow: 0.0925497455em 0.0925497455em 0 0.0462748727em #021556,0.0462748727em 0.0925497455em 0 0.2313743637em #1c58af,inset -0.0925497455em -0.0925497455em 0 0.1388246182em #cee2fe;
+    border-radius: 39.2px;
+    display: inline-block;
+    padding: 15px 30px 8px 30px;
+    text-decoration: none;
+    will-change: transform;
 }
