--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,10 @@ button {
     text-decoration: none;
     will-change: transform;
 }
+
+
+button:active {
+    transform: translate(0px, 5px);
+    -webkit-transform: translate(0px, 5px);
+    box-shadow: 0px 1px 0px 0px;
+}
