--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ button {
     padding: 15px 30px 8px 30px;
     text-decoration: none;
     will-change: transform;
+    cursor:pointer;
+    margin: 5px;
 }
 
 
@@ -34,3 +36,5 @@ button:active {
     -webkit-transform: translate(0px, 5px);
     box-shadow: 0px 1px 0px 0px;
 }
+
+
